Continued implementation of WProf import